--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -4,10 +4,24 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
 	http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
-  <display-name></display-name>	
+  <display-name></display-name>
+  
+  <servlet>  
+        <servlet-name>LoadIndexServlet</servlet-name>  
+        <servlet-class>org.symagic.common.servlet.IndexRedirectServlet</servlet-class>  
+  </servlet>
+  
+  <servlet-mapping>  
+        <servlet-name>LoadIndexServlet</servlet-name>  
+        <url-pattern>/LoadIndex</url-pattern>  
+  </servlet-mapping> 
+  
+  	
   <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>LoadIndex</welcome-file>
   </welcome-file-list>
+  
+  
   <filter>
   	<filter-name>struts2</filter-name>
   	<filter-class>
@@ -20,4 +34,5 @@
   <filter-mapping>
   	<filter-name>struts2</filter-name>
   	<url-pattern>/*</url-pattern>
-  </filter-mapping></web-app>
+  </filter-mapping>
+  </web-app>
