--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.lib.spring3.MYECLIPSE_SPRING30_CORE"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jcaptcha-2.0-alpha-1-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jcaptcha-api-1.0.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/filters-2.0.235.jar"/>
 	<classpathentry kind="output" path="webapp/WEB-INF/classes"/>
 </classpath>
