--- a/.classpath
+++ b/.classpath
@@ -36,5 +36,6 @@
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/struts2-json-plugin-2.3.4.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/struts2-spring-plugin-2.3.4.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/xwork-core-2.3.4.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/org.springframework.context-3.1.0.RELEASE.jar"/>
 	<classpathentry kind="output" path="webapp/WEB-INF/classes"/>
 </classpath>
