--- a/.classpath
+++ b/.classpath
@@ -38,5 +38,8 @@
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/xwork-core-2.3.4.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/org.springframework.context-3.1.0.RELEASE.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/org.springframework.web-3.1.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/filters-2.0.235.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jcaptcha-2.0-alpha-1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jcaptcha-api-1.0.jar"/>
 	<classpathentry kind="output" path="webapp/WEB-INF/classes"/>
 </classpath>
