--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -6,19 +6,9 @@
 	http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
   <display-name></display-name>
   
-  <servlet>  
-        <servlet-name>LoadIndexServlet</servlet-name>  
-        <servlet-class>org.symagic.common.servlet.IndexRedirectServlet</servlet-class>  
-  </servlet>
-  
-  <servlet-mapping>  
-        <servlet-name>LoadIndexServlet</servlet-name>  
-        <url-pattern>/LoadIndex</url-pattern>  
-  </servlet-mapping> 
-  
   	
   <welcome-file-list>
-    <welcome-file>LoadIndex</welcome-file>
+    <welcome-file>index</welcome-file>
   </welcome-file-list>
   
   
@@ -35,4 +25,15 @@
   	<filter-name>struts2</filter-name>
   	<url-pattern>/*</url-pattern>
   </filter-mapping>
+  
+    <servlet>  
+        <servlet-name>LoadIndexServlet</servlet-name>  
+        <servlet-class>org.symagic.common.servlet.IndexRedirectServlet</servlet-class>  
+  </servlet>
+  
+  <servlet-mapping>  
+        <servlet-name>LoadIndexServlet</servlet-name>  
+        <url-pattern>/index</url-pattern>  
+  </servlet-mapping> 
+  
   </web-app>
