--- a/.classpath
+++ b/.classpath
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="Symagic"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.j2eedt.core.MYECLIPSE_JAVAEE_6_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/antlr-2.7.2.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/aopalliance-1.0.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/classworlds-1.1.jar"/>
@@ -14,24 +19,28 @@
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/commons-logging-api-1.1.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/commons-validator-1.3.1.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/filters-2.0.235.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/freemarker-2.3.19.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/javassist-3.11.0.GA.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jcaptcha-2.0-alpha-1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jcaptcha-api-1.0.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/json-lib-2.3-jdk15.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/log4j-1.2.14.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/ognl-3.0.5.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/org.springframework.asm-3.1.0.RELEASE.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/org.springframework.beans-3.1.0.RELEASE.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/org.springframework.context-3.1.0.RELEASE.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/org.springframework.context.support-3.1.0.RELEASE.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/org.springframework.core-3.1.0.RELEASE.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/org.springframework.expression-3.1.0.RELEASE.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/org.springframework.web-3.1.0.RELEASE.jar"/>
-	<classpathentry kind="lib" path="webapp/WEB-INF/lib/org.springframework.web.servlet-3.1.0.RELEASE.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/oro-2.0.8.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/struts2-core-2.3.4.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/struts2-embeddedjsp-plugin-2.3.4.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/struts2-json-plugin-2.3.4.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/struts2-spring-plugin-2.3.4.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/xwork-core-2.3.4.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/org.springframework.context.support-3.1.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/org.springframework.web.servlet-3.1.0.RELEASE.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="output" path="webapp/WEB-INF/classes"/>
 </classpath>
